Bloodfly poison is referred to as venom instead.
Cannot level up when dead.
Embarla Firgasto correctly depletes NH's mana.
Experience gain is not printed out if receiving 0 xp.
Gold cannot be dropped.
Gold mining skill does not improve by mining empty veins.
Herring is categorized as food.
Increased limit for alpha vobs/polys.
Keys no longer have any value.
Main menu sounds are silenced after start a new game or loading one.
Many items have their description now on one line instead of multiple lines.
Nostalgia bonus properly awards levels to NH.
Quarhodron summoning scroll visual changed from piece of paper into proper scroll.
Quests from monastery for novices become obsolete after NH becomes a mage, not when they receive the key to the library.
Quests to join mercenaries and the militia become obsolete already when joining the monastery as novice, not after becoming a mage.
Rum drinking animations are slower.
Sleep dialog has black overlay.
Stone Sentinels will not awaken after Raven is dead.
Stunt bonus can be received only after learning Malcom fell down the hole and there is no penalty for jumping more than once.
Sun Aloe can't be eaten.
Translated dialogs of CH, SH, SH_Oldworld and added addon skills to CH dialog.
When NPC starts a dialog, NH stops moving.
Zombie paladins are restored and replaces zombies in Irdorath.


	Monster

Young Wolves at the pass are now regular Wolves.


	NPCs General

Added ambient inventory for most NPCs alive or dead.
Added annotation for giving and taking back letters for Elvrich, Greg, Opolos, Saturas and giving back the Sacred Hammer for Seprentes.
Added dialog involving multiple NPCs at Ring of Water welcoming ceremony, reversal ritual at the Circle of the Sun, gate to the Valley of Mines.
Added logging for pickpocket failures and successes.
Added pickpocketable items to NPCs inventories, except for traders.

Changed NPCs that are considered "tough" to ignore ranged weapons as well as melee.